fix some errors (Local.of)